5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1745_1532.log
== TEST (2019-05-15 14:18:24) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont < k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	soma = sinh + x
	i = i + 2
	d = d + 1
print(round(soma, 9))	
	
-- OUTPUT:
2.000051307
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:18:40) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont < k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	soma = sinh + x
	i = i + 2
	d = d + 1
print(round(soma, 9))	
	
-- OUTPUT:
2.000051307
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:19:53) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont < k):
	x = radians(x)
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	soma = sinh + x
	i = i + 2
	d = d + 1
print(round(soma, 9))	
	
-- OUTPUT:
3e-09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:20:12) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont < k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	soma = sinh + x
	i = i + 2
	d = d + 1
print(round(soma, 9))	
	
-- OUTPUT:
2.000051307
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:21:19) 
-- CODE:
from math import *
x = radians(float(input("x: ")))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont < k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	soma = sinh + x
	i = i + 2
	d = d + 1
print(round(soma, 9))	
	
-- OUTPUT:
0.034906585
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:21:31) 
-- CODE:
from math import *
x = radians(float(input("x: ")))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont < k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	soma = sinh + x
	i = i + 2
	d = d + 1
print(round(soma, 9))	
	
-- OUTPUT:
0.034906585
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:21:54) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont < k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	soma = radians(sinh + x)
	i = i + 2
	d = d + 1
print(round(soma, 9))	
	
-- OUTPUT:
0.034907481
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:09) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont < k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	soma = sinh + x
	i = i + 2
	d = d + 1
print(round(soma, 9))	
	
-- OUTPUT:
2.000051307
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:17) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont < k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	soma = sinh + x
	i = i + 2
	d = d + 1
print(round(soma, 9))	
	
-- OUTPUT:
2.000051307
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:31) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont < k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	soma = sinh + x
	i = i + 2
	d = d + 1
print(round(soma, 9))	
	
-- OUTPUT:
2.000051307
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:41) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont < k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	soma = sinh + x
	i = i + 2
	d = d + 1
print(round(soma, 9))	
	
-- OUTPUT:
2.000051307
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:23:33) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont < k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	soma = sinh + x
	var = radians(soma)
	i = i + 2
	d = d + 1
print(round(var, 9))	
	
-- OUTPUT:
0.034907481
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:23:42) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont < k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	soma = sinh + x
	var = radians(soma)
	i = i + 2
	d = d + 1
print(round(var, 9))	
	
-- OUTPUT:
0.034907481
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:23:51) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont < k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	soma = sinh + x
	var = radians(soma)
	i = i + 2
	d = d + 1
print(round(var, 9))	
	
-- OUTPUT:
0.034907481
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:24:49) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	soma = sinh + x
	i = i + 2
	d = d + 1
print(round(soma, 9))	
	
-- OUTPUT:
2.000001316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:25:18) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	soma = radians(sinh + x)
	i = i + 2
	d = d + 1
print(round(soma, 9))	
	
-- OUTPUT:
0.034906608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:26:14) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = radians((x**i)/factorial(2*d + 1))
	cont = cont + 1
	soma = sinh + radians(x)
	i = i + 2
	d = d + 1
print(round(soma, 9))	
	
-- OUTPUT:
0.034906608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:26:55) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	x = radians(x)
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	soma = sinh + x
	i = i + 2
	d = d + 1
print(round(soma, 9))	
	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:27:09) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	soma = sinh + x
	i = i + 2
	d = d + 1
print(round(soma, 9))	
	
-- OUTPUT:
2.000001316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:29:45) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh + x, 9))	
	
-- OUTPUT:
2.000001316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:30:23) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(radians(sinh + x), 9))	
	
-- OUTPUT:
0.034906608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:31:21) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh + x, 9))	
	
-- OUTPUT:
2.000001316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:31:25) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh + x, 9))	
	
-- OUTPUT:
2.000001316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:31:48) 
-- CODE:
from math import *
x = radias(float(input("x: ")))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh + x, 9))	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = radias(float(input()))
NameError: name 'radias' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:31:55) 
-- CODE:
from math import *
x = radians(float(input("x: ")))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh + x, 9))	
	
-- OUTPUT:
0.034906585
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:22) 
-- CODE:
from math import *
x = radians(float(input("x: ")))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh + x, 9))	
	
-- OUTPUT:
0.034906585
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:31) 
-- CODE:
from math import *
x = radians(float(input("x: ")))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh + x, 9))	
	
-- OUTPUT:
0.034906585
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:35) 
-- CODE:
from math import *
x = radians(float(input("x: ")))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh + x, 9))	
	
-- OUTPUT:
0.034906585
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:58) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh + x, 9))	
	
-- OUTPUT:
2.000001316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:33:13) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh + x, 9))	
	
-- OUTPUT:
2.000001316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:33:50) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	x = radians(x)
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh + x, 9))	
	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:33:57) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	x = radians(x)
	sinh = (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh + x, 9))	
	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:45:02) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	x = radians(x)
	sinh = x + (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh , 9))	
	
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:45:17) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = x + (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh , 9))	
	
-- OUTPUT:
2.000001316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:45:44) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = x + (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
	sinh = factorial(sinh)
print(round(sinh , 9))	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    sinh = factorial(sinh)
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:47:41) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = x + (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh , 9))	
	
-- OUTPUT:
2.000001316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:47:50) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = x + (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh , 9))	
	
-- OUTPUT:
2.000001316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:48:07) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = x + (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh , 9))	
	
-- OUTPUT:
2.000001316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:48:11) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = x + (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh , 9))	
	
-- OUTPUT:
2.000001316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:48:16) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = x + (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh , 9))	
	
-- OUTPUT:
2.000001316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:48:19) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = x + (x**i)/factorial(2*d + 1)
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh , 9))	
	
-- OUTPUT:
2.000001316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:09) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = (x**i)/factorial(2*d + 1)
	soma = soma + sinh
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh + x, 9))	
	
-- OUTPUT:
2.000001316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:14) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = (x**i)/factorial(2*d + 1)
	soma = soma + sinh
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh + x, 9))	
	
-- OUTPUT:
2.000001316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:42) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = x + (x**i)/factorial(2*d + 1)
	soma = soma + sinh
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh , 9))	
	
-- OUTPUT:
2.000001316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:53:43) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = x + ((x**i)/factorial(2*d + 1))
	soma = soma + sinh
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh , 9))	
	
-- OUTPUT:
2.000001316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:53:48) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = x + ((x**i)/factorial(2*d + 1))
	soma = soma + sinh
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh , 9))	
	
-- OUTPUT:
2.000001316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:54:46) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont < k):
	sinh = x + (x**i)/factorial(2*d + 1)
	soma = soma + sinh
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh , 9))	
	
-- OUTPUT:
2.000051307
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:54:51) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont < k):
	sinh = x + (x**i)/factorial(2*d + 1)
	soma = soma + sinh
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh , 9))	
	
-- OUTPUT:
2.000051307
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:03) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = x + (x**i)/factorial(2*d + 1)
	soma = soma + sinh
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh , 9))	
	
-- OUTPUT:
2.000001316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:07) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont <= k):
	sinh = x + (x**i)/factorial(2*d + 1)
	soma = soma + sinh
	cont = cont + 1
	i = i + 2
	d = d + 1
print(round(sinh , 9))	
	
-- OUTPUT:
2.000001316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:56:10) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont < k):
	sinh = x + (x**i)/factorial(2*d + 1)
	soma = soma + sinh
	cont = cont + 1
	i = i + 2
	d = d + 1
	soma = radians(soma)
print(round(sinh , 9))	
	
-- OUTPUT:
2.000051307
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:57:09) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 3 #expoente
d = 1 #var. do denominador
while (cont < k):
	sinh = (x**i)/factorial(2*d + 1)
	soma = soma + sinh
	cont = cont + 1
	i = i + 2
	d = d + 1
	soma = radians(soma)
print(round(sinh + x, 9))	
	
-- OUTPUT:
2.000051307
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:59:12) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 1 #expoente
d = 1 #var. do denominador
while (cont < k):
	sinh = (x**i)/factorial(d)
	soma = soma + sinh
	cont = cont + 1
	i = i + 2
	d = d + 2
	soma = radians(soma)
print(round(sinh + x, 9))	
	
-- OUTPUT:
2.001410935
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:59:33) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 1 #expoente
d = 1 #var. do denominador
while (cont < k):
	sinh = (x**i)/factorial(d)
	soma = soma + sinh
	cont = cont + 1
	i = i + 2
	d = d + 2
print(round(soma, 9))	
	
-- OUTPUT:
3.62680776
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:59:42) 
-- CODE:
from math import *
x = float(input("x: "))
k = int(input("n: "))
cont = 0 #contadora
soma = 0 #acumuladora
i = 1 #expoente
d = 1 #var. do denominador
while (cont < k):
	sinh = (x**i)/factorial(d)
	soma = soma + sinh
	cont = cont + 1
	i = i + 2
	d = d + 2
print(round(soma, 9))	
	
-- EXECUTION TIME:
0.215363
-- TEST CASE 1:
---- input:
2.0
5
---- correct output:
3.62680776
---- user output:
3.62680776
-- TEST CASE 2:
---- input:
10.0
2
---- correct output:
176.666666667
---- user output:
176.666666667
-- TEST CASE 3:
---- input:
12.0
35
---- correct output:
81377.39570643
---- user output:
81377.39570643
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
